--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
